tests/baselines/reference/ES5For-of7(target=es2015).errors.txt
ES5For-of7.ts(6,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'never', but here has type 'never[]'.
ES5For-of7.ts(6,14): error TS2454: Variable 'w' is used before being assigned.


==== ES5For-of7.ts (2 errors) ====
    for (var w of []) {
        var x = w;
    }
    
    for (var v of []) {
        var x = [w, v];
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'never', but here has type 'never[]'.
!!! related TS6203 ES5For-of7.ts:2:9: 'x' was also declared here.
                 ~
!!! error TS2454: Variable 'w' is used before being assigned.
    }